environments/prod/k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: das-frontend-v1
spec:
  selector:
    matchLabels:
      app: das-frontend
  template:
    metadata:
      labels:
        app: das-frontend
        version: v1
    spec:
      containers:
        - name: das-frontend
          image: gcr.io/architect-certification-289902/20/das-frontend:1
          ports:
          - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: das-frontend
spec:
  type: ClusterIP
  selector:
    app: das-frontend
  ports:
  - port: 8080
