environments/prod/k8s/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: das-gateway
  namespace: das-app
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: das-virtual-service
  namespace: das-app
spec:
  hosts:
  - "*"
  gateways:
  - das-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: das-backend
        port:
          number: 8090
  - match:
    - uri:
        prefix: /static
    route:
    - destination:
        host: das-backend
        port:
          number: 8090         
  - match:
    - uri:
        exact: /
    - uri:
        exact: /favicon.ico
    - uri:
        prefix: /css
    - uri:
        prefix: /js
    route:
    - destination:
        host: das-frontend
        subset: v1
        port:
          number: 8080
      weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: das-frontend
spec:
  host: das-frontend
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
